--- a/conf/dependencies.yml
+++ b/conf/dependencies.yml
@@ -1,5 +1,5 @@
-self: play -> i18ned 0.1
+self: play -> i18ned 0.2-SNAPSHOT
 
 require:
-    - play
-    - org.apache.poi -> poi 3.8  
+    - play 1.2.7
+    - org.apache.poi -> poi 3.8
